@@ -1,7 +1,9 @@
 # This class provides appropriate service names based on the operating system
 #
 class nfs::service_names {
-  if ($facts['os']['name'] in ['RedHat', 'CentOS']) {
+  simplib::assert_metadata($module_name)
+
+  if ($facts['os']['name'] in ['RedHat', 'CentOS', 'OracleLinux']) {
 
     if (versioncmp($facts['os']['release']['major'], '7') < 0) {
       $nfs_lock    = 'nfslock'
@@ -27,8 +29,5 @@ class nfs::service_names {
         $rpcsvcgssd  = 'gssproxy'
       }
     }
-  }
-  else {
-    fail("Operating System '${facts['os']['name']}' is not supported by ${module_name}")
   }
 }
