@@ -16,7 +16,7 @@ describe 'nfs' do
           it { is_expected.to contain_package('nfs4-acl-tools').with_ensure('latest') }
         end
 
-        if os =~ /(?:redhat|centos)-(\d+)/
+        if os =~ /(?:redhat|centos|oraclelinux)-(\d+)/
           it_behaves_like "a fact set"
           it { is_expected.to contain_concat__fragment('nfs_init').with_content(%r(MOUNTD_PORT=20048)) }
         end
@@ -40,7 +40,7 @@ describe 'nfs' do
             })
           }
 
-          if ['RedHat','CentOS'].include?(facts[:operatingsystem]) && facts[:operatingsystemmajrelease].to_s < '7'
+          if ['RedHat','CentOS','OracleLinux'].include?(facts[:operatingsystem]) && facts[:operatingsystemmajrelease].to_s < '7'
             it { is_expected.to contain_service('nfs').with({
                 :ensure  => 'running'
               })
